<resources>
    <string name="app_name">Emilda</string>
    <string name="feedback">Feedback</string>
    <string name="support">Support</string>
    <string name="help">Help</string>
    <string name="web">Website</string>


    <string name="title_activity_details">DetailsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Abin Babu</string>
    <string name="nav_header_subtitle">abinbabuabk@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_accounts">Accounts</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_requests">Requests</string>
    <string name="menu_invoices">Invoices</string>


    <!--Details Activity-->
    <string name="hi">Hi</string>
    <string name="welcome_msg">What can we do for you today?</string>
    <string name="welcome_msg2" />
    <string name="portfolio">Portfolio</string>
    <string name="all_button">All</string>
    <string name="design_butn">Design</string>
    <string name="dev_butn">Development</string>

    <string name="lorem_ipsum">It is a long established fact that a reader will be distracted by the
        readable content of a page when looking at its layout.
        The point of using Lorem Ipsum is that it has
        a more-or-less normal distribution of letters,
    </string>

    <!--Card Expanded-->
    <string name="ce_start_button">Start a Project</string>
    <string name="Nav_logout">Logout</string>


    <!--Feedback Page-->
    <string name="feedback_quote">“We all need people who will give us feedback. That’s how we improve.”</string>
    <string name="feedback_send">Send</string>

    <!--Support Page-->
    <string name="support_call">Call me back</string>
    <string name="phone_emilda">9442449431</string>
    <string name="address_emilda">B4 701 , Bda, Kanmaniki, Kumbalgodu Bangalore 540074, Karnataka, India</string>
    <string name="web_emilda">www.emilda.in</string>

    <!--Login Page-->
    <string name="welcome">Welcome to</string>
    <string name="emilda">Emilda</string>
    <string name="emilda_moto">Unlock Oppurtunites</string>
    <string name="hint">
        <font size="16">Enter Your Mobile Number</font>
    </string>

    <!--OTP Screen-->
    <string name="verifying">Please wait while we verify your mobile number...</string>
    <string name="OTP">OTP</string>

    <string name="requests_made_at">Requests made at</string>
    <string name="on">on</string>

    <!--OnBoarding Screen-->
    <string name="screen1_text1">A complete</string>
    <string name="screen1_text2">IT</string>
    <string name="screen1_text3">solutions</string>
    <string name="screen1_text4">package in your pocket</string>
    <string name="screen1_desc">An IT solutions company is one which offers you range of services, from website and
        mobile application development to graphic designing and digital marketing. Find all the services you need in
        your pocket today.
    </string>

    <string name="screen2_text1">Find the</string>
    <string name="screen2_text2">Service</string>
    <string name="screen2_text3">you</string>
    <string name="screen2_text4">require here.</string>
    <string name="screen2_desc">There is no more a need to spend days looking for a company that can cater to your
        specific needs. EMILDA comprises of individuals of experienced and creative people. People that can answer your
        call today.
    </string>

    <string name="screen3_text1">Got an</string>
    <string name="screen3_text2">Idea?</string>
    <string name="screen3_text3">Make it</string>
    <string name="screen3_text4">real</string>
    <string name="screen3_text5">today.</string>

    <string name="screen3_desc">Ideas do not come around very often. Take a leap with us and allow us to bring your
        ideas to life. Lets turn dreams into reality.
    </string>

    <!--Profile Activity-->
    <string name="profile">Profile</string>


    <string name="instantiate_the_project_amp_brief"><![CDATA[Instantiate the project & Brief]]></string>
    <string name="start_a_project_by_clicking_below_and_we_ll_get_back_to_you">Start a project by clicking below and
        we\'ll get back to you.
    </string>

    <!--    Team Page-->
    <string name="team_desc">Meet our team below. A workplace with its own small little perks. Would you like to be a part of this family?</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
