<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_feedback"
          android:title="@string/feedback"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_support"
          android:title="@string/support"
          android:orderInCategory="101"
          app:showAsAction="never"/>
    <item android:id="@+id/action_help"
          android:title="@string/help"
          android:orderInCategory="102"
          app:showAsAction="never"/>
    <item android:id="@+id/action_web"
          android:title="@string/web"
          android:orderInCategory="103"
          app:showAsAction="never"/>
</menu>

