<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group>
        <item
                android:id="@+id/nav_accounts"
                android:icon="@drawable/ic_accounts"
                android:title="@string/menu_accounts"/>
        <item
                android:id="@+id/nav_orders"
                android:icon="@drawable/ic_orders"
                android:title="@string/menu_orders"/>
        <item
                android:id="@+id/nav_requests"
                android:icon="@drawable/ic_request"
                android:title="@string/menu_requests"/>
        <item
                android:id="@+id/nav_invoices"
                android:icon="@drawable/ic_invoices"
                android:title="@string/menu_invoices"/>
    </group>


</menu>
