<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@drawable/side_nav_bar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:orientation="vertical"
        android:gravity="bottom">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nav_start_marg"
            android:layout_marginStart="@dimen/nav_start_marg"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:contentDescription="@string/nav_header_desc"
            android:id="@+id/imageView"
            android:layout_marginLeft="27dp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/bigHeading"
            android:layout_marginStart="@dimen/nav_start_marg"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginLeft="@dimen/nav_start_marg"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/small_text.black"
            android:layout_marginStart="@dimen/nav_start_marg"
            android:text="@string/nav_header_subtitle"
            android:id="@+id/textView"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="@dimen/nav_start_marg"/>
    <View
            android:id="@+id/divider"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:backgroundTint="@color/grey_div"
            android:background="@color/grey_div"
    />

</LinearLayout>


