<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ExpandedCard">
    <ImageView android:layout_width="match_parent"
               android:layout_height="@dimen/ce_Image_height" app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintHorizontal_bias="1.0" android:id="@+id/imageView2"/>
    <TextView
            android:layout_width="wrap_content"
            style="@style/bigHeading"
            android:text="Sample"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintEnd_toEndOf="@+id/imageView2"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp" android:id="@+id/textView2"/>

    <TextView android:layout_width="0dp"
              style="@style/small_text"
              android:textAlignment="viewStart"
              android:text="@string/lorem_ipsum"
              android:layout_height="wrap_content" android:gravity="start"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
              android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginRight="24dp" android:layout_marginEnd="24dp"
              app:layout_constraintTop_toBottomOf="@+id/textView2" android:id="@+id/textView3"/>
    <TextView android:layout_width="wrap_content"
              style="@style/subtitle"
              android:text="@string/portfolio"
              android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="@+id/textView3"
              app:layout_constraintEnd_toEndOf="@+id/textView3" app:layout_constraintHorizontal_bias="0.006"
              android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
              android:id="@+id/textView4"/>
    <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            style="@style/button_text.big"
            app:cornerRadius="0dp"
            android:text="@string/ce_start_button"
            android:layout_height="0dp" android:id="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingBottom="0dp" android:insetBottom="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>